--- a/style.css
+++ b/style.css
@@ -108,6 +108,8 @@ nav ul li a:active::after{
   padding: 3rem 2rem;
   display: flex;
   justify-content: space-around;
+   flex-wrap: wrap;
+  gap: 10px;
   background-color: #f9f9f9dc;
 }
 
@@ -135,4 +137,14 @@ nav ul li a:active::after{
 }
 span{
   font-weight: 600;
+}
+@media screen  and (max-width:400px){
+  .feature p{
+  width: 200px;
+}
+}
+@media screen  and (max-width:900px){
+  .feature p{
+  width: 200px;
+}
 }
