--- a/style.css
+++ b/style.css
@@ -128,6 +128,9 @@ nav ul li a:active::after{
   margin: 1rem auto;
   max-width: 500px;
 }
+h5{
+  padding: 10px;
+}
 
 .footer {
   background-color: #222;
