--- a/style.css
+++ b/style.css
@@ -77,6 +77,9 @@ nav ul li a:active::after{
  nav  .active::after{
  width: 100%;
 }
+ nav ul .active{
+cursor: auto;
+}
 
 .hero-content h2 {
   margin-top: 2rem;
