--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ body {
   line-height: 1.6;
   color: #333;
 }
+.b{
+  border:none;
+  background-color:white;
+  color:black;
+  cursor:pointer;
 
 .hero {
   background-image:linear-gradient(to top, rgba(0, 0, 0, 0.724), rgba(81, 95, 106, 0)),url(ui.jpg);
@@ -154,3 +159,4 @@ span{
   width: 200px;
 }
 }
+
