--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   background-color:white;
   color:black;
   cursor:pointer;
+}
 
 .hero {
   background-image:linear-gradient(to top, rgba(0, 0, 0, 0.724), rgba(81, 95, 106, 0)),url(ui.jpg);
@@ -159,4 +160,5 @@ span{
   width: 200px;
 }
 }
+
 
