--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 
 .hero {
-  background-image:linear-gradient(to top, rgba(0, 0, 0, 0.724), rgba(81, 95, 106, 0)),url(ui.jpg);
+  background-image:linear-gradient(to top, rgba(0, 0, 0, 0.724), rgba(81, 95, 106, 0)),url(image.png);
   height: 50%;
   background-position: center;
   background-repeat: no-repeat;
@@ -155,6 +155,7 @@ span{
   width: 200px;
 }
 }
+
 
 
 
